removed margin spacing from top nav space no longer needed due to extra padding

--- a/css/compiled/sassy.css
+++ b/css/compiled/sassy.css
@@ -137,7 +137,7 @@ nav ul {
 #nav1 li {
   display: inline;
   list-style-type: none;
-  margin: 10px;
+  margin: 0;
   line-height: 32px; }
 
 #nav1 a:link {
